# ros2_stretch_docking

./: CMakeLists.txt  README.md  demo.py  package.xml  setup.cfg  setup.py
config/: aruco_marker_info.yaml  docking_params.yaml
launch/: apriltag_dock_pose_publisher.launch.py  aruco_detect.launch.py  aruco_detection_pipeline.launch.py  docking_with_apriltag_sim.launch.py  docking_with_aruco_sim.launch.py  nav2_docking.launch.py  nav2_docking_sim.launch copy.py  ros2_nav2_docking.launch.py
params/: apriltags_36h11.yaml  stretch_docking.yaml
ros2_stretch_docking/: __init__.py  aruco_detect_node.py  docking_node.py  docking_node_sim.py
ros_nav2_docking/: aruco_detector.py  docking_node.py
src/: detected_dock_pose_publisher.cpp  dock_pose_publisher.cpp  rotate_camera_node.cpp
