<?xml version="1.0"?>
<package format="3">
  <name>ros2_stretch_docking</name>
  <version>0.0.1</version>
  <description>Custom docking procedure for Stretch using Nav2 and ArUco markers</description>

  <maintainer email="victor@animum.ai">Victor Nan Fernandez-Ayala</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- Dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>nav2_util</depend>
  <depend>nav_msgs</depend>
  <depend>action_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <!-- <depend>opencv</depend> -->
  <depend>std_srvs</depend>
  <depend>nav2_simple_commander</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
